--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-﻿duckdb
-pandas
 numpy
+pandas
 plotly
 streamlit
-statsmodels
 tensorflow
+statsmodels
 Pillow
-scikit-learn
 mysql-connector-python
-matplotlib
+duckdb
 gspread
-oauth2client
+matplotlib
+scikit-learn
